[package]
name = "RustBoy"
version = "0.1.0"
authors = ["tobyw"]
build = "build.rs"

[dependencies]
hex = "0.2.0"
csv = "1.0.0-beta.4"
piston = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
image = "*"
piston_window = "0.77.0"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"